--- a/index.html
+++ b/index.html
@@ -5,11 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/stylesheet.css">
-    <link rel="stylesheet" href="css/fontsheet.css">
     <title>╭( ･ㅂ･)و</title>
 </head>
 <body>
-    <p> Hello </p>
+    <p> Добро Пожаловать на Мою Страницу </p>
+
+    <div id="info"> 
+
+        <p> Здесь вы сможете найти в основном стихи о всем известном и всеми возлюбленном бароне дыма, также знакомом под прозвищем "Дымный Барон". Надеемся содержание понравится посетителям сайта. </p>
+    </div>
+
+    <div class="heading">
+
+        <p> Стихийный Запас </p>
+
+    </div>
     
 </body>
-</html>
