--- a/index.html
+++ b/index.html
@@ -8,16 +8,16 @@
     <title>╭( ･ㅂ･)و</title>
 </head>
 <body>
-    <p> Добро Пожаловать на Мою Страницу </p>
+    <p> Добре Дошли на Моята Страница </p>
 
     <div id="info"> 
 
-        <p> Здесь вы сможете найти в основном стихи о всем известном и всеми возлюбленном бароне дыма, также знакомом под прозвищем "Дымный Барон". Надеемся содержание понравится посетителям сайта. </p>
+        <p> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolor, consequatur? </p>
     </div>
 
     <div class="heading">
 
-        <p> Стихийный Запас </p>
+        <p> Осведомления </p>
 
     </div>
     
